--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <div class="email">
           <div class="email__head">
-            <button class="email__icon email__icon--closed"></button>
+            <!-- <button class="email__icon email__icon--closed"></button> -->
             <div class="email__info">
               <div class="email__sender"></div>
               <div class="email__subject"></div>
